# pbr-viewer

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  justfile
cmake/: backward.cmake  glad.cmake  glfw.cmake  imgui.cmake  linux.cmake
src/: common.h  main.cpp
src/core/: CMakeLists.txt  bits.h  error.cpp  error.h  types.h  utils.h
